// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PaletteSpinner props.display should display a black spinner when set to inline 1`] = `
<div>
  <div
    class="default-spinner undefined inline"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`PaletteSpinner props.display should display a white spinner when set to modal 1`] = `
<div>
  <div
    class="default-spinner undefined modal"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;

exports[`PaletteSpinner props.spinner should display a custom string when props.spinner is set 1`] = `
<div>
  <div
    class="spinner atom-spinner modal"
    role="status"
  >
    Waiting
  </div>
</div>
`;

exports[`PaletteSpinner props.spinner should display an "inline" custom string when props.spinner is set 1`] = `
<div>
  <div
    class="spinner atom-spinner inline"
    role="status"
  >
    Waiting
  </div>
</div>
`;

exports[`PaletteSpinner props.spinner should render the DefaultSpinnerComponent by default 1`] = `
<div>
  <div
    class="default-spinner undefined modal"
    role="status"
  >
    <span
      class="sr-only"
    >
      Loading...
    </span>
  </div>
</div>
`;
